k8s/selenium-grid/firefox-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: firefox
  namespace: selenium-grid
  labels:
    app: firefox
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
      - env:
        - name: SE_EVENT_BUS_HOST
          value: selenium-event-bus
        - name: SE_EVENT_BUS_PUBLISH_PORT
          value: "4442"
        - name: SE_EVENT_BUS_SUBSCRIBE_PORT
          value: "4443"
        - name: SE_VNC_NO_PASSWORD
          value: "1"
        - name: SE_NODE_MAX_SESSIONS
          value: "4"
        - name: SE_NODE_OVERRIDE_MAX_SESSIONS
          value: "true"
        - name: SE_NODE_SESSION_TIMEOUT
          value: "30"
        image: selenium/node-firefox:4.5.0
        imagePullPolicy: ""
        name: firefox
        resources: {}
        volumeMounts:
          - name: dshm
            mountPath: /dev/shm
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
status: {}
