k8s/selenium-grid/selenium-distributor-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: selenium-distributor
  namespace: selenium-grid
  labels:
    app: selenium-distributor
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: selenium-distributor
  template:
    metadata:
      labels:
        app: selenium-distributor
    spec:
      containers:
      - env:
        - name: SE_EVENT_BUS_HOST
          value: selenium-event-bus
        - name: SE_EVENT_BUS_PUBLISH_PORT
          value: "4442"
        - name: SE_EVENT_BUS_SUBSCRIBE_PORT
          value: "4443"
        - name: SE_SESSIONS_MAP_HOST
          value: selenium-sessions
        - name: SE_SESSIONS_MAP_PORT
          value: "5556"
        - name: SE_SESSION_QUEUE_HOST
          value: selenium-session-queue
        - name: SE_SESSION_QUEUE_PORT
          value: "5559"
        image: selenium/distributor:4.5.0
        imagePullPolicy: ""
        name: selenium-distributor
        ports:
        - containerPort: 5553
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
