k8s/selenium-grid/selenium-router-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: selenium-router
  namespace: selenium-grid
  labels:
    app: selenium-router
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: selenium-router
  template:
    metadata:
      labels:
        app: selenium-router
    spec:
      containers:
      - env:
        - name: SE_DISTRIBUTOR_HOST
          value: selenium-distributor
        - name: SE_DISTRIBUTOR_PORT
          value: "5553"
        - name: SE_SESSIONS_MAP_HOST
          value: selenium-sessions
        - name: SE_SESSIONS_MAP_PORT
          value: "5556"
        - name: SE_SESSION_QUEUE_HOST
          value: selenium-session-queue
        - name: SE_SESSION_QUEUE_PORT
          value: "5559"
        image: selenium/router:4.5.0
        imagePullPolicy: ""
        name: selenium-router
        ports:
        - containerPort: 4444
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
