k8s/selenium-grid/selenium-sessions-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: selenium-sessions
  namespace: selenium-grid
  labels:
    app: selenium-sessions
spec:
  selector:
    matchLabels:
      app: selenium-sessions
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: selenium-sessions
    spec:
      containers:
      - env:
        - name: SE_EVENT_BUS_HOST
          value: selenium-event-bus
        - name: SE_EVENT_BUS_PUBLISH_PORT
          value: "4442"
        - name: SE_EVENT_BUS_SUBSCRIBE_PORT
          value: "4443"
        image: selenium/sessions:4.5.0
        imagePullPolicy: ""
        name: selenium-sessions
        ports:
        - containerPort: 5556
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
