k8s/selenium-grid/selenium-distributor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-distributor
  namespace: selenium-grid
spec:
  ports:
  - name: "5553"
    port: 5553
    targetPort: 5553
  selector:
    app: selenium-distributor
status:
  loadBalancer: {}
