k8s/selenium-grid/selenium-event-bus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-event-bus
  namespace: selenium-grid
spec:
  ports:
  - name: "4442"
    port: 4442
    targetPort: 4442
  - name: "4443"
    port: 4443
    targetPort: 4443
  - name: "5557"
    port: 5557
    targetPort: 5557
  selector:
    app: selenium-event-bus
status:
  loadBalancer: {}
