k8s/selenium-grid/selenium-router-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /
    prometheus.io/port: '4444'
  name: selenium-router
  namespace: selenium-grid
spec:
  selector:
    app: selenium-router
  ports:
  - name: "selenium-router"
    port: 4444
    targetPort: 4444
