k8s/selenium-grid/selenium-session-queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-session-queue
  namespace: selenium-grid
spec:
  ports:
  - name: "5559"
    port: 5559
    targetPort: 5559
  selector:
    app: selenium-session-queue
status:
  loadBalancer: {}
