k8s/selenium-grid/selenium-sessions-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-sessions
  namespace: selenium-grid
spec:
  ports:
  - name: "5556"
    port: 5556
    targetPort: 5556
  selector:
    app: selenium-sessions
status:
  loadBalancer: {}
