k8s/selenium-grid/selenium-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-router
spec:
  rules:
    - host: all-infra.selenium-grid.local.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: selenium-router
                port:
                  number: 4444
